Updated wording DaFIS/KFS

--- a/Purchasing.Web/Views/Order/_ReviewFpdComplete.cshtml
+++ b/Purchasing.Web/Views/Order/_ReviewFpdComplete.cshtml
@@ -5,7 +5,7 @@
     <section class="ui-corner-all display-form">
         <header class="ui-corner-top ui-widget-header showInNav">FPD Completed Status </header>
         <div class="section-text">
-            <p>This is used for matching up P Card purchases with the DaFIS/KFS FPD documents</p>    
+            <p>This is used for matching up P Card purchases with the KFS FPD documents</p>    
         </div>
 
         <div class="section-contents">
