--- a/Purchasing.Web/Views/Workgroup/_AddressForm.cshtml
+++ b/Purchasing.Web/Views/Workgroup/_AddressForm.cshtml
@@ -99,7 +99,7 @@ Example: Dinosaur 1  *@
                     <div class="editor-field">
                         @Html.EditorFor(model => model.WorkgroupAddress.Zip)
                         @Html.ValidationMessageFor(model => model.WorkgroupAddress.Zip)
-                        <span style="font-style: italic; margin-left: 10px;">* When shipping to campus, use 95616-5270 for proper tax calculation in Dafis.</span>
+                        <span style="font-style: italic; margin-left: 10px;">* When shipping to campus, use 95616-5270 for proper tax calculation.</span>
                     </div>
                 </li>
                 <li>
