xlxs doesn't work, so change the message to only permit xls files.

--- a/Purchasing.Web/Views/Workgroup/BulkVendor.cshtml
+++ b/Purchasing.Web/Views/Workgroup/BulkVendor.cshtml
@@ -18,7 +18,7 @@
 
         
             <div class="section-text">
-                <p>Use this page to bulk load vendors from an Excel Spreadsheet. Please use this <a href="../../Content/import.xls">sample spreadsheet</a> for a template. Format must match the sample to work. Only valid Excel Spreadsheets are accepted (.xls and xlsx).</p>
+                <p>Use this page to bulk load vendors from an Excel Spreadsheet. Please use this <a href="../../Content/import.xls">sample spreadsheet</a> for a template. Format must match the sample to work. Only valid Excel Spreadsheets are accepted (.xls).</p>
             </div>
 
         <div class="section-contents">
