Add a warning that the departmental Admin request form isn't for normal user access.

--- a/Purchasing.Web/Views/DepartmentalAdminRequest/Create.cshtml
+++ b/Purchasing.Web/Views/DepartmentalAdminRequest/Create.cshtml
@@ -27,7 +27,8 @@
 <section class="display-form">
     <header class="ui-widget-header ui-corner-top">Departmental Admin Training Class</header>
     <div class="section-contents">
-        <div class="section-text">	
+        <div class="section-text">
+            <p><strong>NOTE!</strong> This is for Departmental Admin access. (To setup and configure the workgroups for your department.) If your department already has access, and you just need to be added, you should contact your Departmental Admin instead.</p>		
             <p>Before we grant the access you are requesting, you must first take our training. For specific instructions, please click on the link below.</p>
             <p>If you are a Shared Service Center Participant, you should contact them in addition to filling out this form as they have specific instructions.</p>
         </div>
