Use the help request program to submit help tickets instead of uservoice.

--- a/Purchasing.Web/Views/Help/Index.cshtml
+++ b/Purchasing.Web/Views/Help/Index.cshtml
@@ -29,17 +29,14 @@
 </section>
     <section id="support" class="container split">
         <header>
-            @*<a href="http://ucdavis.uservoice.com/knowledgebase">
-            <img src='@Url.Content("~/Images/knowledgebase.png")' alt="knowledge base"/>
-        </a>*@
-            <a href="http://ucdavis.uservoice.com/knowledgebase">
+            <a href="https://secure.caes.ucdavis.edu/help/Ticket/Submit?appName=opp?appName=opp" target="_blank">
                 <img src='@Url.Content("~/Images/gethelp.png")' alt="get help"/>
             </a>
         </header>
     
         <div class="contents">
         
-            <p>Need some help?  Try our knowledge base or submitting a ticket to our help desk.</p>
+            <p>Need some help?  Try submitting a ticket to our help desk.</p>
 
         </div>
 
@@ -60,6 +57,20 @@
                 <li>Who are the Departmental Admins for those workgroups?</li>
                 <li>Have a technical questions instead? Try the other help button.</li>
             </ul>
+
+        </div>
+
+    </section>
+    <section id="faq" class="container split">
+        <header>
+            <a class="button" href="https://ucdavis.uservoice.com/knowledgebase" target="_blank">
+                Knowledge Base
+            </a>
+        </header>
+    
+        <div class="contents">
+        
+            <p>Try our knowledge base.</p>
 
         </div>
 
