main css display

--- a/Purchasing.Mvc/Views/Shared/_Layout.cshtml
+++ b/Purchasing.Mvc/Views/Shared/_Layout.cshtml
@@ -22,8 +22,9 @@
         
     }
     
+    @Styles.Render("~/Css/main")
 
-	<style type="text/css">
+    <style type="text/css">
 		#branding
 		{
 			z-index: 0;
