namespace and script bundles

--- a/Purchasing.Mvc/Views/Home/About.cshtml
+++ b/Purchasing.Mvc/Views/Home/About.cshtml
@@ -1,7 +1,8 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "About Us";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<h2>About</h2>
+<p>
+     Put content here.
+</p>
