--- a/Purchasing.Mvc/Views/Order/_Options.cshtml
+++ b/Purchasing.Mvc/Views/Order/_Options.cshtml
@@ -1,4 +1,4 @@
-﻿@using Purchasing.Web.App_GlobalResources
+﻿@using Purchasing.Mvc.App_GlobalResources
 @model OrderModifyModel
 
 purchasing.options({
