fix up recent activity ajax

--- a/Purchasing.Mvc/Views/HistoryAjax/RecentActivity.cshtml
+++ b/Purchasing.Mvc/Views/HistoryAjax/RecentActivity.cshtml
@@ -1,4 +1,4 @@
-﻿@using Purchasing.Web.Helpers
+﻿@using Purchasing.Mvc.Helpers
 @model Purchasing.Core.Queries.OrderTrackingHistory
 
 @if (Model == null)
